<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_button_white"
    android:paddingHorizontal="@dimen/horizontal_margin_16"
    android:paddingVertical="@dimen/vertical_margin_6"
    android:layout_marginBottom="@dimen/vertical_margin_6"
    android:orientation="horizontal">

    <View
        android:id="@+id/icon"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="@dimen/horizontal_margin_6"
        android:background="@drawable/icon_zoom"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/meetingNumberTextView"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textSize="@dimen/font_size16"
            android:textColor="@color/blue"
            android:text="@string/meeting_number" />

        <TextView
            android:id="@+id/meetingPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:textSize="@dimen/font_size16"
            android:textColor="@color/blue"
            android:text="@string/meeting_password" />

        <TextView
            android:id="@+id/dateTimeTextView"
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size16"
            android:textColor="@color/blue"
            android:text="@string/date_and_time" />
    </LinearLayout>
</LinearLayout>